--- a/DBsGameplayPaper/DBsGameplayAdminTool/src/main/resources/plugin.yml
+++ b/DBsGameplayPaper/DBsGameplayAdminTool/src/main/resources/plugin.yml
@@ -14,3 +14,6 @@ commands:
     usage: /managesup <player>
     permission: managesup.player
     permission-message: No permission
+  gamemodesup:
+    permission: manage.gamemodesup
+    permission-message: No permission
