Übertragen des Areas order/Schematics Ordner und einfügungen des Grundgestells des Defs-Command

--- a/DBsGameplayPaper/DBsGameplayBlockBreaker/src/main/resources/plugin.yml
+++ b/DBsGameplayPaper/DBsGameplayBlockBreaker/src/main/resources/plugin.yml
@@ -5,8 +5,9 @@ api-version: '1.20'
 
 commands:
   pickaxe:
-    permissiom: blockbreaker.get
+    permission: blockbreaker.get
   sellall:
   bupgrade:
   bhelp:
   mine:
+  blockbreaker:
