--- a/DBsGameplayPaper/DBsGameplayBlockBreaker/src/main/resources/plugin.yml
+++ b/DBsGameplayPaper/DBsGameplayBlockBreaker/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: DBsBlockBreaker
+name: DbsGameplayBlockBreaker
 version: '1.0'
 main: net.dbsgameplay.blockbreaker.DBsGameplayBlockBreaker
 api-version: '1.20'
