--- a/DBsGameplayPaper/DBsGameplayBlockBreaker/src/main/resources/plugin.yml
+++ b/DBsGameplayPaper/DBsGameplayBlockBreaker/src/main/resources/plugin.yml
@@ -2,6 +2,10 @@ name: DbsGameplayBlockBreaker
 version: '1.0'
 main: net.dbsgameplay.blockbreaker.DBsGameplayBlockBreaker
 api-version: '1.20'
+author: DBsGameplay Development Team
+
+depend:
+  - DbsGameplayCore
 
 commands:
   pickaxe:
