Add: /fly (+ CorePlayer improvements)

--- a/DBsGameplayPaper/DBsGameplayCore/src/main/resources/plugin.yml
+++ b/DBsGameplayPaper/DBsGameplayCore/src/main/resources/plugin.yml
@@ -9,3 +9,9 @@ loadbefore:
   - DbsGameplayDungeonCrusher
   - DbsGameplayAdminTool
   - DbsGameplaySkyBlock
+
+commands:
+  fly:
+    aliases: [fliegen, flug]
+    permission: dbsgameplay.core.team.fly
+    description: Fliege wie ein Vogel!
