--- a/DBsGameplayPaper/.gitignore
+++ b/DBsGameplayPaper/.gitignore
@@ -5,17 +5,13 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/**
 *.iws
 *.iml
 *.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
 ### Eclipse ###
 .apt_generated
 .classpath
@@ -27,6 +23,7 @@ out/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
+
 
 ### NetBeans ###
 /nbproject/private/
