--- a/DBsGameplayPaper/DBsGameplayCore/src/main/resources/messages_de.yml
+++ b/DBsGameplayPaper/DBsGameplayCore/src/main/resources/messages_de.yml
@@ -1,12 +1,5 @@
 languagename: 'Deutsch'
-base:
-  prefixes:
-    # Das Template für jeden Prefix
-    prefixTemplate: '§8§l| §r{prefix} §8§l| §r'
-    # Netzwerk Prefix
-    network: ''
-  nopermission: '&7Dafür hast du &ckeine <hover value="&7Fehlende Berechtigung: &c{permission}">Berechtigung</hover>&7.'
 common:
-  nopermission: 'You do not have permission to use this command.'
-  playernotonline: 'Player is not online.'
-  playernotfound: 'Player not found.'
+  nopermission: '&7Dafür hast du &ckeine <hover value="&7Fehlende Berechtigung: &c{permission}">Berechtigung</hover>&7.'
+  playernotonline: '&7Der Spieler &6{player} &7ist nicht online.'
+  playernotfound: '&7Der Spieler &6{player} &7wurde nicht gefunden.'
